--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
     </head>
 
     <body>
-        <div id="container-principal">
+       <!-- <div id="container-principal"> -->
             <div id="container-login">
-                <div id="login-text">
-                    <p>Login</p>
+                <div id="container-top">
+                    <div id="container-tucano">
+                        <img id="tucano-img" src="tucanoNovo.png" draggable="false">
+                    </div>
+                    <div id="login-text">
+                        <p>Login</p>
+                    </div>
                 </div>
                 <div id="container-login-inputs">
-                    <form action="/cadastrar" method="post">  <!--VOLTAR AQUI PRA CONFIGURAR O SERVIDOR-->
+                    <form action="/index" method="post">  <!--VOLTAR AQUI PRA CONFIGURAR O SERVIDOR-->
                         <div class="label-float">
-                            <input class="input" type="text" placeholder=" " id="usuario" name="usuario" size="30">
+                            <input class="input" type="text" placeholder=" " id="usuario" name="usuario">
                             <label>E-mail</label><br><br>
                         </div> 
                         <div class="label-float">
-                            <input class="input" type="password" placeholder=" " required id="senha" name="senha" size="30">
+                            <input class="input" type="password" placeholder=" " required id="senha" name="senha">
                             <label>Password</label>
                         </div>
                             <div id="container-button">
@@ -59,6 +64,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        <!--</div>-->
     </body>
 </html>
